# simpletools-projeto_m3_intro_a_python

./: LICENSE  README.md  pyproject.toml
src/simpletools/: __init__.py  mathops.py
tests/: test_mathops.py
