[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "simpletools"
version = "0.1.0"
authors = [
  { name = "Equipe - Projeto M3" }
]
description = "Biblioteca simples de utilitários matemáticos para demonstração de empacotamento."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

[project.urls]
Homepage = "https://example.com"

[tool.setuptools.packages.find]
where = ["src"]
